home-automation/octoprint/octoprint.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: octoprint
  name: octoprint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: octoprint
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: octoprint
    spec:
      containers:
        - env:
            # WARN: Port needs to be explicitly set
            # - see https://github.com/OctoPrint/octoprint-docker/issues/160
            - name: OCTOPRINT_PORT
              value: "5000"
          name: octoprint
          image: docker.io/octoprint/octoprint:1.9.3
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: octoprint-data
              mountPath: /octoprint
            - name: ttyusb
              mountPath: /dev/ttyUSB0
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: octoprint-data
          persistentVolumeClaim:
            claimName: octoprint-data
        - name: ttyusb
          hostPath:
            path: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
