home-automation/octoprint/octoprint.Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: octoprint
  name: octoprint
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: octoprint
